[gd_scene load_steps=2 format=3 uid="uid://bn58wr7venro6"]

[ext_resource type="Script" path="res://Scripts/ranking_position.gd" id="1_468dn"]

[node name="RankingPosition" type="HBoxContainer"]
theme_override_constants/separation = 24
alignment = 1
script = ExtResource("1_468dn")

[node name="PositionLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
text = "1ยบ"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayerName" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
text = "jogador 3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
text = "350"
horizontal_alignment = 1
vertical_alignment = 1
